# assistant

./: .gitignore  config.py  pyproject.toml
plugins/linkding/: linkding.plug  linkding.py
plugins/llm/: llm.plug  llm.py
plugins/llm/toolset/: __init__.py
