[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

errbot = "^6.2.0"
llama-index = "~0.9.44"
html2text = "^2020.1.16"

[tool.ruff.lint]
select = ["I"]
