[tool.poetry]
name = "assistant"
version = "0.1.0"
description = ""
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

errbot = "^6.2.0"
simpleaichat = "^0.2.2"
emoji = "^2.10.1"
beautifulsoup4 = "^4.12.3"
trafilatura = "^1.7.0"

[tool.ruff.lint]
select = ["I"]
